--- a/index.html
+++ b/index.html
@@ -330,73 +330,40 @@
 				let rightForearmMovingUp = null;
 				let waistMoving = null;
 				let bodyMoving = null;
-				if (!detectMovement) {
-					return;
+
+				if (!detectMovement || speaking) {
+			 				return;
 				}
-				if (speaking) {
-					return;
-				}
-				// Check movement for each potentiometer
+
+
+				const movements = {
+					"HEAD": { variable: 'headMovingUp', threshold: movementThreshold },
+					"LEFT LEG": { variable: 'leftLegMovingUp', threshold: movementThreshold },
+					"RIGHT LEG": { variable: 'rightLegMovingUp', threshold: movementThreshold },
+					"LEFT SHOULDER": { variable: 'leftShoulderMovingUp', threshold: movementThreshold },
+					"RIGHT SHOULDER": { variable: 'rightShoulderMovingUp', threshold: movementThreshold },
+					"LEFT FOREARM": { variable: 'leftForearmMovingUp', threshold: movementThreshold },
+					"RIGHT FOREARM": { variable: 'rightForearmMovingUp', threshold: movementThreshold },
+					"WAIST": { variable: 'waistMoving', threshold: movementThreshold }
+				};
+
 				for (let i = 0; i < numPotentiometers; i++) {
-					// Check movement based on potentiometer position and its corresponding label
-					if (labels[i] == "HEAD") {
-						// Movement detection for head (up and down movement)
-						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							headMovingUp = true; // Head is moving up
-						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							headMovingUp = false; // Head is moving down
-						}
-					} else if (labels[i] == "LEFT LEG") {
-						// Movement detection for left leg (up and down movement)
-						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							leftLegMovingUp = false; // Left leg is moving down
-						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							leftLegMovingUp = true; // Left leg is moving up
-						}
-					} else if (labels[i] == "RIGHT LEG") {
-						// Movement detection for right leg (up and down movement)
-						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							rightLegMovingUp = false; // Right leg is moving down
-						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							rightLegMovingUp = true; // Right leg is moving up
-						}
-					} else if (labels[i] == "LEFT SHOULDER") {
-						// Movement detection for left shoulder (up and down movement)
-						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							leftShoulderMovingUp = false; // Left shoulder is moving up
-						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							leftShoulderMovingUp = true; // Left shoulder is moving down
-						}
-					} else if (labels[i] == "RIGHT SHOULDER") {
-						// Movement detection for right shoulder (up and down movement)
-						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							rightShoulderMovingUp = false; // Right shoulder is moving up
-						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							rightShoulderMovingUp = true; // Right shoulder is moving down
-						}
-					} else if (labels[i] == "LEFT FOREARM") {
-						// Movement detection for left forearm (up and down movement)
-						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							leftForearmMovingUp = true; // Left forearm is moving up
-						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							leftForearmMovingUp = false; // Left forearm is moving down
-						}
-					} else if (labels[i] == "RIGHT FOREARM") {
-						// Movement detection for right forearm (up and down movement)
-						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							rightForearmMovingUp = true; // Right forearm is moving up
-						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							rightForearmMovingUp = false; // Right forearm is moving down
-						}
-					} else if (labels[i] == "WAIST") {
-						// Movement detection for waist (left and right movement)
-						if (potValues[i] < previousPotValues[i] - movementThreshold) {
-							waistMoving = false; // Waist is moving left
-						} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-							waistMoving = true; // Waist is moving right
+					const label = labels[i];
+					const potValue = potValues[i];
+					const previousPotValue = previousPotValues[i];
+					const movement = movements[label];
+
+					if (movement) {
+						const { variable, threshold } = movement;
+
+						if (potValue < previousPotValue - threshold) {
+							window[variable] = false;
+						} else if (potValue > previousPotValue + threshold) {
+							window[variable] = true;
 						}
 					}
 				}
+
 				// Displaying movement text based on detected head movement
 				if (headMovingUp != null) {
 					partMoving = "head";
