--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
 					partMoving = "left leg";
 					if (leftLegMoving) {
 						directionMoving = "moving up";
-						displayText("{partMoving} is {directionMoving}");
+						//displayText("{partMoving} is {directionMoving}");
 					} else {
 						partMoving = "left leg";
 						directionMoving = "moving down";
-						displayText("{partMoving} is {directionMoving}");
+						//displayText("{partMoving} is {directionMoving}");
 					}
 				}
 				// Displaying movement text based on detected right leg movement
@@ -440,10 +440,10 @@
 					partMoving = "right leg";
 					if (rightLegMoving) {
 						directionMoving = "moving up";
-						displayText("{partMoving} is {directionMoving}");
+						//displayText("{partMoving} is {directionMoving}");
 					} else {
 						directionMoving = "moving down";
-						displayText("{partMoving} is {directionMoving}");
+						//displayText("{partMoving} is {directionMoving}");
 					}
 				}
 				// Displaying movement text based on detected left arm movement
